--- a/apps/http/package.json
+++ b/apps/http/package.json
@@ -23,12 +23,13 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@repo/db": "*",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "@repo/db": "*"
+    "zod": "^3.24.1"
   }
 }
