--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,6 +6,7 @@
     "./client": "./src/index.ts"
   },
   "scripts": {
+    "dev": "ts-node-dev --files src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
