--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.0",
+    "@codemirror/lang-javascript": "^6.2.2",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@uiw/react-codemirror": "^4.23.7",
+    "@uiw/react-split": "^5.9.3",
     "gsap": "^3.12.7",
     "next": "15.1.4",
     "react": "^19.0.0",
