--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,11 +14,14 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@uiw/react-codemirror": "^4.23.7",
     "@uiw/react-split": "^5.9.3",
+    "axios": "^1.7.9",
     "gsap": "^3.12.7",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "sonner": "^1.7.2"
   },
   "devDependencies": {
     "@types/node": "^20",
