--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.26.0",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@uiw/react-codemirror": "^4.23.7",
     "@uiw/react-split": "^5.9.3",
@@ -19,9 +20,11 @@
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "sonner": "^1.7.2"
+    "sonner": "^1.7.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
